syntax = "proto3";

package pb;
import "barber/service.proto";

option go_package = "barbershop/src/pb/barber";


message GetServicesRequest{
    string chain_id = 1;
    string shop_id = 2;
}

message GetServicesResponse{
    repeated Service services = 1;
}
